--- a/src/app/children/admin/dictionaries-admin/components/downtime-reason-group-form/downtime-reason-group-form.html
+++ b/src/app/children/admin/dictionaries-admin/components/downtime-reason-group-form/downtime-reason-group-form.html
@@ -3,9 +3,9 @@
         <p class="tui-text_body-s">
             Название
         </p>
- 
+
         <tui-textfield tuiTextfieldSize="m">
-            <input [formControl]="readonlycontrolName" tuiTextfield type="text"/>
+            <input [formControl]="controlName" tuiTextfield type="text"/>
         </tui-textfield>
     </div>
 
