--- a/src/app/children/admin/dictionaries-admin/children/dict-auxiliary-operations-admin/children/create-dict-auxiliary-operations/create-dict-auxiliary-operations.html
+++ b/src/app/children/admin/dictionaries-admin/children/dict-auxiliary-operations-admin/children/create-dict-auxiliary-operations/create-dict-auxiliary-operations.html
@@ -2,7 +2,7 @@
 
 <div class="dashboard-admin">
     <p class="tui-text_h4">
-        Новая вспомогательная операция
+        Новое время работы
     </p>
 
     <app-auxiliary-operation-form (cancel)="onCancel()" (save)="onSave($event)" submitLabel="Добавить"/>
