--- a/src/app/children/admin/dictionaries-admin/children/dict-auxiliary-operations-admin/children/update-dict-auxiliary-operations/update-dict-auxiliary-operations.html
+++ b/src/app/children/admin/dictionaries-admin/children/dict-auxiliary-operations-admin/children/update-dict-auxiliary-operations/update-dict-auxiliary-operations.html
@@ -4,7 +4,7 @@
     <app-loader [isLoading]="isLoading"/>
 
     <p class="tui-text_h4">
-        Редактирование вспомогательной операции
+        Редактирование времени работы
     </p>
 
     <app-auxiliary-operation-form (cancel)="onCancel()" (save)="onSave($event)" *ngIf="!isLoading && operation"
