--- a/src/app/children/admin/dictionaries-admin/children/dict-products-admin/dict-products-admin.html
+++ b/src/app/children/admin/dictionaries-admin/children/dict-products-admin/dict-products-admin.html
@@ -4,7 +4,7 @@
     <div class="progress-container">
         <div class="first-container">
             <p class="tui-text_h4">
-                Продукты
+                Продукция
             </p>
 
             <button (click)="goCreate()" iconStart="@tui.plus" size="m" tuiButton type="button">
