--- a/src/app/children/admin/dictionaries-admin/children/dict-products-admin/children/create-product-admin/create-product-admin.html
+++ b/src/app/children/admin/dictionaries-admin/children/dict-products-admin/children/create-product-admin/create-product-admin.html
@@ -2,7 +2,7 @@
 
 <div class="dashboard-admin">
     <p class="tui-text_h4">
-        Новый продукт
+        Новая продукция
     </p>
 
     <app-product-form (cancel)="onCancel()" (save)="onSave($event)" submitLabel="Добавить"/>
